fixed hero section hidden by header

--- a/Gallerias/src/index.css
+++ b/Gallerias/src/index.css
@@ -140,6 +140,7 @@ header a:hover {
 }
 
 main {
+  margin-top: 70px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -349,6 +350,10 @@ footer.fade-in {
   body,
   #root {
     align-items: center;
+  }
+
+  main {
+    margin-top: 30px;
   }
 
   .nav-links {
